--- a/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
+++ b/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
@@ -23,7 +23,7 @@
                                             <mat-cell *matCellDef="let element"> {{element.SlNo}} </mat-cell>
                                         </ng-container>
                                         <ng-container matColumnDef="MonthName">
-                                            <mat-header-cell *matHeaderCellDef> Month </mat-header-cell>
+                                            <mat-header-cell *matHeaderCellDef style="justify-content: center;"> Month </mat-header-cell>
                                             <mat-cell *matCellDef="let element">
                                                 {{element.MonthName}}
                                             </mat-cell>
@@ -48,8 +48,7 @@
                                         </ng-container>
                                         <ng-container matColumnDef="Action">
                                             <mat-header-cell *matHeaderCellDef></mat-header-cell>
-                                            <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center"
-                                                fxLayout="row">
+                                            <mat-cell *matCellDef="let element">
                                                 <mat-checkbox
                                                     [disabled]="loading || element.Balance==0 || Permission=='read'"
                                                     mat-mini-fab (change)="SelectRow(element,$event)"
