--- a/src/app/modules/employeedetail/gradehistory/gradehistory.component.html
+++ b/src/app/modules/employeedetail/gradehistory/gradehistory.component.html
@@ -36,6 +36,15 @@
                             [checked]="element.Active==1?true:false">
                         </mat-checkbox>
                     </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="IsCurrent">
+                    <mat-header-cell *matHeaderCellDef>Current
+                    </mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        <mat-checkbox (click)="$event.stopPropagation()" (change)="updateIsCurrent(element,$event)"
+                            [checked]="element.IsCurrent==1?true:false">
+                        </mat-checkbox>
+                    </mat-cell>
                 </ng-container>                
                 <ng-container matColumnDef="EmpGradeId">
                     <mat-header-cell *matHeaderCellDef>Grade
