--- a/src/app/modules/appconfigdata/variable-config/variable-config.component.html
+++ b/src/app/modules/appconfigdata/variable-config/variable-config.component.html
@@ -32,7 +32,7 @@
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Name
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element ">
-                        <mat-form-field [style.width.px]="350" appearance="outline">
+                        <mat-form-field appearance="outline">
                             <input matInput [maxlength]="15" [value]="element.VariableName"
                                 [(ngModel)]="element.VariableName">
                         </mat-form-field>
@@ -42,7 +42,7 @@
                     <mat-header-cell *matHeaderCellDef>Description
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element ">
-                        <mat-form-field [style.width.px]="350" appearance="outline">
+                        <mat-form-field appearance="outline">
                             <input matInput [maxlength]="100" (blur)="onBlur(element,$event)" 
                             [value]="element.VariableDescription" autocomplete="Off"
                                 [(ngModel)]="element.VariableDescription">
@@ -53,7 +53,7 @@
                     <mat-header-cell *matHeaderCellDef>Formula
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element ">
-                        <mat-form-field appearance="outline" [style.width.px]="300">
+                        <mat-form-field appearance="outline">
                             <input matInput [maxlength]="256" autocomplete="Off" (blur)="onBlur(element,$event)"
                                 [value]="element.VariableFormula" [(ngModel)]="element.VariableFormula">
                         </mat-form-field>
@@ -82,7 +82,7 @@
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Display Order
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="100">
+                        <mat-form-field appearance="outline">
                             <input matInput autocomplete="Off" [value]="element.DisplayOrder"
                                 [(ngModel)]="element.DisplayOrder">
                         </mat-form-field>
