--- a/src/app/modules/employeedetail/gradehistory/gradehistory.component.scss
+++ b/src/app/modules/employeedetail/gradehistory/gradehistory.component.scss
@@ -7,7 +7,7 @@
     flex           : 0 0 60px;
     justify-content: center;
 }
-
+.mat-column-IsCurrent,
 .mat-column-Active,
 .mat-column-Action {
     justify-content: center;
