--- a/src/app/modules/schoolreports/today-collection/today-collection.component.html
+++ b/src/app/modules/schoolreports/today-collection/today-collection.component.html
@@ -44,7 +44,7 @@
         </ng-container>
         <ng-container matColumnDef="ReceiptDate">
             <mat-header-cell *matHeaderCellDef> Receipt Date </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.ReceiptDate|date:'dd-MM-yyyy'}} </mat-cell>
+            <mat-cell *matCellDef="let element"> {{element.ReceiptDate|date:'dd/MM/yyyy'}} </mat-cell>
         </ng-container>
         <ng-container matColumnDef="ReceiptNo">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Receipt No. </mat-header-cell>
