--- a/src/app/modules/student/studentboard/studentboard.component.html
+++ b/src/app/modules/student/studentboard/studentboard.component.html
@@ -1,7 +1,7 @@
 
 <mat-card>
     <mat-card-title style="margin:20px">Student</mat-card-title>
-    <mat-card-subtitle style="margin:20px" style="background-color:lightgray;padding:15px;margin: 0px 20px 0px 20px;">{{StudentName}}</mat-card-subtitle>
+    <mat-card-subtitle style="margin:20px" style="font-weight: bold; background-color:lightgray;padding:15px;margin: 0px 20px 0px 20px;">{{StudentName}}</mat-card-subtitle>
     <mat-card-content style="margin:20px">
         <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
             <mat-tab *ngFor="let component of components;let indx=index">
