--- a/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.scss
+++ b/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.scss
@@ -10,7 +10,7 @@ mat-cell:first-of-type {
 .mat-column-Action{
     flex:1 1 100px
 }
-.mat-column-Subject{
+.mat-column-SlotClassSubjectId{
     flex:1 1 500px
 }
 .mat-column-ClassName{
