--- a/src/app/modules/ClassSubject/classsubjectdetail/classsubjectdetail.component.html
+++ b/src/app/modules/ClassSubject/classsubjectdetail/classsubjectdetail.component.html
@@ -30,13 +30,20 @@
                 </mat-cell>
             </ng-container> -->
             <ng-container matColumnDef="SubjectName">
-                <mat-header-cell *matHeaderCellDef mat-sort-header> Subject </mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header>
+                    <div style="align-items: flex-start;">Subject<br>
+                        <mat-form-field style="width: 150px;">
+                            <mat-label>Search</mat-label>
+                            <input matInput [formControl]="nameFilter" autocomplete="Off">
+                        </mat-form-field>
+                    </div>
+                </mat-header-cell>
                 <mat-cell *matCellDef="let element">
                     {{element.SubjectName}}
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="SubjectTypeId">
-                <mat-header-cell *matHeaderCellDef> Subject Type </mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Subject Type </mat-header-cell>
                 <mat-cell *matCellDef="let element">
                     <mat-form-field appearance="outline">
                         <mat-label>subject type</mat-label>
@@ -50,7 +57,7 @@
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="Credits">
-                <mat-header-cell *matHeaderCellDef> Credits </mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Credits </mat-header-cell>
                 <mat-cell *matCellDef="let element">
                     <mat-form-field appearance="outline">
                         <input matInput type="number" max="100" [value]="element.Credits" (blur)="onBlur(element)"
@@ -59,10 +66,11 @@
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="TeacherId">
-                <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Teacher
+                <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef mat-sort-header>
+                    Teacher
                 </mat-header-cell>
                 <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
-                    <mat-form-field  appearance="outline">
+                    <mat-form-field appearance="outline">
                         <mat-label>Teacher</mat-label>
                         <mat-select (selectionChange)="onBlur(element)" [(ngModel)]="element.TeacherId"
                             [value]="element.TeacherId">
@@ -74,30 +82,31 @@
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="Active">
-                <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Active </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    <mat-checkbox *ngIf="ClassSubjectList.length>0" (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
-                        [checked]="element.Active==1?true:false">
+                    <mat-checkbox *ngIf="ClassSubjectList.length>0" (click)="$event.stopPropagation()"
+                        (change)="updateActive(element,$event)" [checked]="element.Active==1?true:false">
                     </mat-checkbox>
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="Action">
                 <mat-header-cell *matHeaderCellDef>
-                    <button [disabled]="loading || Permission=='read'"
-                    matTooltip="save all" mat-mini-fab (click)="SaveAll()">
-                    <mat-icon>all_out</mat-icon>
-                </button>
+                    <button [disabled]="loading || Permission=='read'" matTooltip="save all" mat-mini-fab
+                        (click)="SaveAll()">
+                        <mat-icon>all_out</mat-icon>
+                    </button>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                    <button [disabled]="loading || !element.Action || Permission=='read'" matTooltip="save"
-                        mat-mini-fab (click)="UpdateOrSave(element)">
+                    <button [disabled]="loading || !element.Action || Permission=='read'" matTooltip="save" mat-mini-fab
+                        (click)="UpdateOrSave(element)">
                         <mat-icon>save</mat-icon>
                     </button>
 
                 </mat-cell>
             </ng-container>
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;" style="display:flex;align-items: baseline;"></mat-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;" style="display:flex;align-items: baseline;">
+            </mat-row>
         </mat-table>
         <mat-paginator [pageSizeOptions]="[5,10,25,100]"></mat-paginator>
     </div>
