--- a/src/app/modules/attendance/studentattendance/studentattendance.component.html
+++ b/src/app/modules/attendance/studentattendance/studentattendance.component.html
@@ -19,7 +19,7 @@
     <mat-form-field appearance="outline">
         <mat-label>Subject</mat-label>
         <mat-select formControlName="searchClassSubjectId">
-            <mat-option>--select subject--</mat-option>
+            <mat-option>--select--</mat-option>
             <mat-option *ngFor="let item of FilteredClassSubjects" [value]="item.ClassSubjectId">{{item.ClassSubject}}
             </mat-option>
         </mat-select>
