--- a/src/app/modules/auth/forgotpassword/forgotpassword.component.html
+++ b/src/app/modules/auth/forgotpassword/forgotpassword.component.html
@@ -2,7 +2,7 @@
     <mat-card-title style="margin: 30px;">Forgot Password</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
-        <!-- <alert></alert> -->
+        <mat-spinner *ngIf="loading" diameter="25" style="margin:15px;position:relative;margin-left: 50%;"></mat-spinner>
         <form *ngIf="!isSuccessful" style="margin:30px;display: flex;flex-direction: column;" 
         [formGroup]="forgotpwdForm" novalidate>
                 <mat-form-field>
