--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -3,7 +3,7 @@
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
         <!-- <alert></alert> -->
-
+        <mat-spinner *ngIf="loading" diameter="25" style="margin:15px;position:relative;margin-left: 50%;"></mat-spinner>
         <form style="display: flex;flex-direction: column;margin: 30px;" *ngIf="!isSuccessful"
             [formGroup]="RegistrationForm">
             <div>
