--- a/src/app/modules/control/roleapppermission/RoleAppPermissiondashboard/RoleAppPermissiondashboard.component.html
+++ b/src/app/modules/control/roleapppermission/RoleAppPermissiondashboard/RoleAppPermissiondashboard.component.html
@@ -87,10 +87,14 @@
                 </button>
             </mat-header-cell>
             <mat-cell *matCellDef="let element">
-                <button [disabled]="!element.Action || Permission=='read' || loading" matTooltip="view/edit"
+                <button style="margin-right: 15px;" [disabled]="!element.Action || Permission=='read' || loading" matTooltip="save"
                     mat-mini-fab (click)="Save(element)">
                     <mat-icon *ngIf="!loading">save</mat-icon>
                 </button>
+                <!-- <button [disabled]="!element.Action || Permission!='rwd' || loading" matTooltip="delete"
+                mat-mini-fab (click)="Delete(element)">
+                <mat-icon *ngIf="!loading">delete</mat-icon>
+            </button> -->
             </mat-cell>
         </ng-container>
         <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
