--- a/src/app/modules/control/roleapppermission/RoleAppPermissiondashboard/RoleAppPermissiondashboard.component.scss
+++ b/src/app/modules/control/roleapppermission/RoleAppPermissiondashboard/RoleAppPermissiondashboard.component.scss
@@ -3,12 +3,12 @@ mat-form-field{
     width: 98%;
 }
 
-.mat-column-FeatureName,.mat-column-PermissionId{
-    flex:0 0 150px;
+.mat-column-FeatureName,.mat-column-Action,.mat-column-PermissionId{
+    flex:1 1 150px;
 }
-.mat-column-Active,.mat-column-Action,.mat-column-ApplicationFeatureRoleId{
+.mat-column-Active,.mat-column-ApplicationFeatureRoleId{
     justify-content: center;
-    flex:0 0 100px;
+    flex:1 1 100px;
 }
 @media only screen and (max-width: 600px) {
     mat-cell:first-of-type{
